--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,11 +1,3 @@
 {% comment %}
-  Global site tag (gtag.js) - Google Analytics - USDS account
+  Global site tag (gtag.js) - Google Analytics - CDS account
 {% endcomment %}
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-132706295-2"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-132706295-2');
-</script>
