--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -199,7 +199,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
       color: $atlantic_blue;
     }
 
-    #usds_logo {
+    #cds_logo {
       display: inline-block;
       img {
         max-height: 100%;
@@ -208,7 +208,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
       }
     }
 
-    #usds_logo:hover {
+    #cds_logo:hover {
       background: none;
       img{
        opacity: 0.9;
