--- a/assets/_sass/styles.scss
+++ b/assets/_sass/styles.scss
@@ -7,11 +7,8 @@ $pacific_blue:          #046B99; // primary-alt-darkest
 $miami_vice_blue:       $pacific_blue; // original
 $white:                 #ffffff;
 $cds-yellow:            #ffcc33;
-$black:                 #323A45; // gray-dark
-$usds-navy:             #000000;
+$gray-dark:             #323A45;
 $cds-black:             #000000;
-$usds-navy-dark:        #122d44;
-$usds-navy-light:       #577795;
 $usds-blue-medium:      #333333;
 $usds-blue-bright-dark: #0071bc;
 $usds-gray:             #5d5d5d;
@@ -56,7 +53,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     list-style-position: inside;
     li {
       margin: 1em 0;
-      color: $black;
+      color: $gray-dark;
     }
   }
 
@@ -85,7 +82,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     line-height: 1.3em;
     font-weight: 300;
     margin-top: 0;
-    color: $black;
+    color: $gray-dark;
     @include media($mobile) {
       font-size: 32px;
     }
@@ -115,7 +112,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
   p {
-    color: $black;
+    color: $gray-dark;
     font-weight: 400;
     font-size: 17px;
     line-height: 2.0em;
@@ -141,7 +138,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
 
     @include media($slimmer) {
       @include shift(0);
-      @include span-columns(12);
+      @include span-columns(13);
     }
   }
 
@@ -257,7 +254,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
     position: fixed;
     width: 100%;
     height: 0;
-    background: $usds-navy;
+    background: $cds-black;
     color: $white;
     .outer_container {
       padding: 0 40px;
@@ -268,9 +265,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
       margin-top: 0;
       font-weight: 300;
       color: $white;
-      // line-height: 20px;
       display: inline-block;
-
     }
     h3:hover {
       text-decoration: underline;
@@ -420,7 +415,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
         color: white;
       }
       a:hover {
-        color: $black;
+        color: $gray-dark;
       }
     }
 
@@ -557,7 +552,7 @@ $slimmer: new-breakpoint(min-width 641px max-width 980px 12);
   }
 
   a {
-    color: $black;
+    color: $gray-dark;
     text-decoration: underline;
   }
 
