--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,8 @@
               {% if page.lang == 'fr' %}
               <a href="{{site.baseurl}}/">EN</a>
               {% else %}
-              <a href="{{site.baseurl}}/fr">FR</a>
+              <!--<a href="{{site.baseurl}}/fr">FR</a>-->
+              FR
               {% endif %}
             </li>
           </ul>
@@ -76,7 +77,8 @@
             {% if page.lang == 'fr' %}
             <a href="{{site.baseurl}}/">English</a>
             {% else %}
-            <a href="{{site.baseurl}}/fr">Français</a>
+            <!--<a href="{{site.baseurl}}/fr">Français</a>-->
+            Français (bientôt)
             {% endif %}
           </div>
 
